--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,21 @@
-<ion-menu [content]="content">
+<!--<ion-menu [content]="content">-->
 
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>Super Eleven</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!--<ion-header>-->
+    <!--<ion-toolbar color="primary">-->
+      <!--<ion-title>Super Eleven</ion-title>-->
+    <!--</ion-toolbar>-->
+  <!--</ion-header>-->
 
-  <ion-content>
-    <ion-list>
-      <button ion-item *ngFor="let p of pages" (click)="openPage(p)" color="light">
-        {{p.title}}
-      </button>
-    </ion-list>
-  </ion-content>
+  <!--<ion-content>-->
+    <!--<ion-list>-->
+      <!--<button ion-item *ngFor="let p of pages" (click)="openPage(p)" color="light">-->
+        <!--{{p.title}}-->
+      <!--</button>-->
+    <!--</ion-list>-->
+  <!--</ion-content>-->
 
-</ion-menu>
+<!--</ion-menu>-->
 
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<!--<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>-->
+
+<ion-nav [root]="rootPage"></ion-nav>
