--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -18,22 +18,24 @@
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #fff,
-  secondary: #32c5d2,
+  primary: #FF6255,
+  secondary: #a4b8c1,
   danger: #f53d3d,
-  light: #9eacb4,
+  light: #f4f4f4,
   dark: #222,
+
   up: limegreen,
   down: red,
 );
 
-
-.fixed-content{
-  background-color: #f4f4f4 !important;
+.fixed-content {
+  background-color: #e1e7ea !important;
 
 }
 
-$content-ios-outer-background : #f4f4f4;
+$tab-button-md-active-color: color($colors, secondary);
+$tab-button-md-inactive-color: light;
+$content-ios-outer-background: #f4f4f4;
 
 // App iOS Variables
 // --------------------------------------------------
