layout + detail player

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,9 +33,9 @@ $colors: (
 
 }
 
-$tab-button-md-active-color: color($colors, secondary);
-$tab-button-md-inactive-color: light;
-$content-ios-outer-background: #f4f4f4;
+//$tab-button-md-active-color: color($colors, secondary);
+//$tab-button-md-inactive-color: light;
+//$content-ios-outer-background: #f4f4f4;
 
 // App iOS Variables
 // --------------------------------------------------
