take.pipe returns 0 when 0 popover dismissed after click design

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -34,5 +34,10 @@ ion-buttons.bar-buttons.bar-buttons-ios {
   width: 100% !important;
 }
 .mynavbar{
+  padding-top: 20px !important;
   height: 85px !important;
+}
+
+.popover-arrow {
+  display: none !important;
 }
