Design changes for the app

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -50,5 +50,11 @@ ion-buttons.bar-buttons.bar-buttons-ios {
   padding-right: 0;
 }
 .label-ios {
-   margin: 0px 0px 0px 0;
+   margin: 0 0 0 0;
+}
+
+.card-ios {
+  margin: 12px 0;
+  width: 100%;
+  border-radius: 0;
 }
