--- a/src/pages/teamstand-details/teamstand-details.scss
+++ b/src/pages/teamstand-details/teamstand-details.scss
@@ -1,3 +1,17 @@
 page-teamstand-details {
+  ion-row.header.row{
+    padding-right: 30.75px;
+  }
 
+  ion-col.club.col {
+    max-width: 65px;
+  }
+
+  ion-col.naam.col {
+    width: 100%;
+  }
+
+  ion-col.punten.col {
+    max-width: 45px;
+  }
 }
