--- a/src/pages/totaalstand/totaalstand.scss
+++ b/src/pages/totaalstand/totaalstand.scss
@@ -1,3 +1,18 @@
 page-totaalstand {
 
+  ion-row.header.row{
+    padding-right: 30.75px;
+  }
+
+  ion-col.positie.col {
+    max-width: 65px;
+  }
+
+  ion-col.naam.col {
+    width: 100%;
+  }
+
+  ion-col.punten.col {
+    max-width: 65px;
+  }
 }
