--- a/src/pages/vragenstand/vragenstand.scss
+++ b/src/pages/vragenstand/vragenstand.scss
@@ -1,3 +1,17 @@
 page-vragenstand {
+  ion-row.header.row{
+    padding-right: 30.75px;
+  }
 
+  ion-col.positie.col {
+    max-width: 40px;
+  }
+
+  ion-col.naam.col {
+    width: 100%;
+  }
+
+  ion-col.punten.col {
+    max-width: 45px;
+  }
 }
