--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -58,3 +58,10 @@ ion-buttons.bar-buttons.bar-buttons-ios {
   width: 100%;
   border-radius: 0;
 }
+.item-ios.item-block .item-inner
+{
+  border-bottom: 0;
+}
+.item-md.item-block .item-inner {
+  border-bottom: 0;
+}
