--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -53,7 +53,8 @@ ion-buttons.bar-buttons.bar-buttons-ios {
    margin: 0 0 0 0;
 }
 
-.card-ios {
+.card-ios,
+.card-md {
   margin: 12px 0;
   width: 100%;
   border-radius: 0;
