--- a/src/pages/supereleven-navbar/supereleven-navbar.scss
+++ b/src/pages/supereleven-navbar/supereleven-navbar.scss
@@ -16,7 +16,7 @@ supereleven-navbar {
     //position: absolute;
     top: 0;
     left: 0;
-    margin-top: 10px;
+    //margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     display: block;
