--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -30,7 +30,7 @@ ion-buttons.bar-buttons.bar-buttons-ios {
 .popover-ios .popover-content {
   top: 78px !important;
   // needed for Iphone X
-  top: calc(58px + env(safe-area-inset-top)) !important;
+  top: calc(44px + env(safe-area-inset-top)) !important;
   left: 0 !important;
   width: 100% !important;
 }
@@ -38,7 +38,7 @@ ion-buttons.bar-buttons.bar-buttons-ios {
 .popover-md .popover-content {
   top: 78px !important;
   // needed for Iphone X
-  top: calc(58px + env(safe-area-inset-top)) !important;
+  top: calc(44px + env(safe-area-inset-top)) !important;
   left: 0 !important;
   width: 100% !important;
 }
@@ -83,16 +83,9 @@ ion-navbar {
   .toolbar-ios-white .toolbar-background-ios {
     background: #fff;
   }
-  img {
-    //position: absolute;
-    top: 0;
-    left: 0;
-    //margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    padding-left: 21px;
-    height: 50px;
+  img.center {
+    padding: 10px;
+    width: 90%;
   }
 }
 
